After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788413 - gstglcontext_egl.c: fix compilation warning
gstglcontext_egl.c: fix compilation warning
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-02 07:29 UTC by Justin Kim
Modified: 2017-10-02 11:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add gstglwindow header (780 bytes, patch)
2017-10-02 07:30 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2017-10-02 07:29:26 UTC
It complains "implicit declaration warning".

gstglcontext_egl.c: In function 'gst_gl_context_egl_create_context':
gstglcontext_egl.c:526:5: error: implicit declaration of function 'gst_gl_window_get_window_handle' [-Werror=implicit-function-declaration]
     window_handle = gst_gl_window_get_window_handle (window);
     ^
gstglcontext_egl.c:526:5: error: nested extern declaration of 'gst_gl_window_get_window_handle' [-Werror=nested-externs]
Comment 1 Justin Kim 2017-10-02 07:30:22 UTC
Created attachment 360739 [details] [review]
add gstglwindow header
Comment 2 Sebastian Dröge (slomo) 2017-10-02 11:34:23 UTC
commit c74d557127a46f652fbb9d0065517daa87e1ea06 (HEAD -> master)
Author: Justin Kim <justin.kim@collabora.com>
Date:   Mon Oct 2 16:22:26 2017 +0900

    glcontext_egl: Add gstglwindow header
    
    Otherwise, compiler complains implicit function declaration warning.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=788413